added card section

--- a/index.html
+++ b/index.html
@@ -1,16 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flower-Website</title>
-</head>
-<body>
-    <header>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flower-Website</title>
 
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+</head>
+<body class="">
+    <header class="">
+        <nav class="flex justify-between max-w-7xl items-center p-8 m-auto">
+            <div>
+                <img src="assets/logo.png" alt="logo">
+            </div>
+            <div>
+                <ul class="flex list-none">
+                   <li><a href="" class="link-tittle ml-3 text-black font-bold">Home</a></li>
+                   <li><a href="" class="link-tittle ml-8">Shop</a></li>
+                   <li><a href="" class="link-tittle ml-8">About Us</a></li>
+                   <li><a href="" class="link-tittle ml-8"><i class="fas fa-store"></i> Cart ($56) </a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="bannar flex max-w-7xl m-auto mt-8 justify-between">
+            <div class="bannar-tittle w-1/2 text-xl">
+                <h1 class="text-6xl mt-28">ALWAYS <span class="text-orange-500"> FRESH FLOWERS</span></h1>
+                <p class="mt-4 decoration-orange-300 mt-8">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion</p>
+            </div>
+            <div class="bannar-img ">
+                <img class="place-items-end" src="assets/hero-flower.png" alt="flower">
+            </div>
+        </div>
     </header>
     <main>
-
+        <div class="our-plate">
+            <div class="text-center">
+                <h1 class="text-7xl mt-18"> <span class="text-orange-500 text-7xl"> Our </span> Plates</h1>
+                <p class="text-xl mt-3 text-gray-500 mt-6">Indulge your senses with the beauty and fragrance of our fresh flower shop. <br>From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="cards max-w-7xl items-center bg-red-100 m-auto mt-8 grid grid-cols-4">
+                <div class="card1">
+                    <img src="assets/sample-flower-image.png">
+                    <p>Lily Blossom</p>
+                    <p>20 USD</p>
+                    <button class="bg-orange-600">ADD TO CART</button>
+                </div>
+                <div class="card2">
+                     <img src="assets/sample-flower-image.png">
+                    <p>Lily Blossom</p>
+                    <p>20 USD</p>
+                    <button>ADD TO CART</button>
+                </div>
+                <div class="card3">
+                     <img src="assets/sample-flower-image.png">
+                    <p>Lily Blossom</p>
+                    <p>20 USD</p>
+                    <button>ADD TO CART</button>
+                </div>
+                <div class="card4">
+                     <img src="assets/sample-flower-image.png">
+                    <p>Lily Blossom</p>
+                    <p>20 USD</p>
+                    <button>ADD TO CART</button>
+                </div>
+                <div class="card5">
+                     <img src="assets/sample-flower-image.png">
+                    <p>Lily Blossom</p>
+                    <p>20 USD</p>
+                    <button>ADD TO CART</button>
+                </div>
+                <div class="card6">
+                     <img src="assets/sample-flower-image.png">
+                    <p>Lily Blossom</p>
+                    <p>20 USD</p>
+                    <button>ADD TO CART</button>
+                </div>
+                <div class="card7">
+                     <img src="assets/sample-flower-image.png">
+                    <p>Lily Blossom</p>
+                    <p>20 USD</p>
+                    <button>ADD TO CART</button>
+                </div>
+                <div class="card8">
+                     <img src="assets/sample-flower-image.png">
+                    <p>Lily Blossom</p>
+                    <p>20 USD</p>
+                    <button>ADD TO CART</button>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         
