added join button

--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
                     Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>classic roses to exotic blooms, we offer a wide variety of fresh.
                 </p>
             </div>
-            
-            <div class="grid grid-cols-3 gap-4 max-w-7xl mx-auto mt-20">
+             <div class="grid grid-cols-3 gap-4 max-w-7xl mx-auto mt-20">
             <!-- Left Column -->
                 <div class="grid grid-rows-2 gap-4 col-span-1">
              <!-- Bloom Plant -->
@@ -157,6 +156,27 @@
                 </div>
             </div>
          </section>
+         <!-- Join the colorful Bunch -->
+          <section class="relative h-120 flex items-center justify-center bg-[url('assets/news-letter-bg.png')] bg-cover bg-center mt-50 mb-30">
+            <div class="absolute inset-0 bg-black/10"></div>
+
+        <!-- Content -->
+            <div class="relative text-center text-white space-y-8">
+                 <h1 class="text-3xl md:text-4xl font-bold">Join the colorful Bunch</h1>
+
+         <!-- Email Subscribe Form -->
+            <div class="flex justify-center">
+                <input 
+                    type="email" 
+                    placeholder="Write email"
+                    class="bg-white text-gray-700 p-3 rounded-l-lg w-160 focus:outline-none"
+                />
+                    <button class="bg-orange-500 text-white px-18 rounded-r-lg hover:bg-orange-600">
+                            Subscribe
+                    </button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         
