--- a/index.html
+++ b/index.html
@@ -178,8 +178,32 @@
             </div>
         </section>
     </main>
-    <footer>
-        
+    <footer class="grid grid-cols-4 max-w-7xl m-auto mb-20">
+        <div class="ml-10">
+        <img src="assets/logo.png">
+        <p class="text-base text-gray-500 mt-5">Indulge your senses with the<br> beauty and fragrance of our fresh flower shop.</p>
+      </div> 
+        <div class="flex flex-col space-y-3 ml-10 text-gray-700">
+            <a href="" class="tittle">Home</a>
+            <a href="" class="tittle">About Us</a>
+            <a href="" class="tittle">Blog</a>
+            <a href="" class="tittle">FAQ</a>
+            <a href="" class="tittle">Contact Us</a>
+        </div>
+        <div class="flex flex-col space-y-3 ml-10 text-gray-700">
+            <a href="" class="tittle">Features</a>
+            <a href="" class="tittle">Pricing</a>
+            <a href="" class="tittle">Privacy Policy</a>
+            <a href="" class="tittle">Terms of Service</a>
+            <a href="" class="tittle">Help Center</a>
+        </div>
+      <div class="flex ml-20 m-auto mt-1">
+        <img class="mr-6" src="assets/icon-linkedin.png">
+        <img class="mr-6" src="assets/icon-facebook.png">
+        <img class="mr-6" src="assets/icon-twitter.png">
+        <img class="mr-6" src="assets/icon-youtube.png">
+      </div>
+       
     </footer>
 </body>
 </html>
